# Agentic-AI-vs-LLM-Worflows

./: .gitignore  LICENSE  README.md  agent.py  data.py  logic.py  main.py  multiagent.py  prompts.py  pyproject.toml  report.py  utils.py  workflow.py
results/: run_20260603_112748_on.json  run_20260603_112748_on.md  run_20260603_151333_on.json  run_20260603_151333_on.md
